# sparklespray

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  TODO  Vagrantfile  backfill_job_started_events.py  benchmark.Rmd  benchmark.html  build-consumer.sh  build-grpc.sh  build.sh  bundle_certs.py  communications.md  dev-notes.md  dynamodb_test.py  end_to_end_test.py  enrichment-dockerfile  ensure.sh  exec.go  frozen-requirements3.txt  gcp_setup.py  helper.py  helper_test.go  io.go  main.go  manual.md  monitor-design.md  next-steps.md  pyproject.toml  queue.go  queue_test.go  remaining-steps.md  requirements-dev.txt  requirements.txt  run-consume-for-cluster.sh  run-consume-test.sh  run-smoketest  (+12 more)
cli/: CLAUDE.md  batch_api_test.py  local-test.sh  long-sleeptest  main.go  mypy.ini  pb_pb2.py  pyproject.toml  pyright-ratchet  pyright-ratchet-errors.txt  pyrightconfig.json  sleeptest  test-config  try_api.py  uncovered  unused
cli/sparklespray/: __init__.py  architecture.md  batch_api.py  certgen.py  cluster_service.py  cluster_store.py  compute_service.py  config.py  csv_utils.py  datastore_batch.py  datastore_helper.py  errors.py  gcp_permissions.py  gcp_setup.py  gcp_utils.py  gcp_verify.py  hasher.py  index.yaml  io_helper.py  job_queue.py  job_store.py  key_store.py  list.py  log.py  logclient.py  main.py  main_as_module.py  model.py  node_req_store.py  node_service.py  pb_pb2.py  pb_pb2.pyi  pb_pb2_grpc.py  print_failures.py  pubsub_client.py  reset.py  resize_cluster.py  spec.py  startup_failure_tracker.py  submit.py  (+9 more)
cli/sparklespray/commands/: clean.py  delete.py  fetch.py  grant.py  kill.py  list.py  logs.py  prep_image.py  reset.py  setup.py  shared.py  show.py  status.py  submit.py  summarize_job_metrics.py  validate.py  version.py  watch.py
cli/sparklespray/livelog/: isolated_log_client.py  logclient.py  pickle_pipe.py  pubsub_client.py  test_isolated_log_client.py
cli/sparklespray/watch/: __init__.py  completion.py  completion_rate.py  failure_monitor.py  heartbeat.py  log_stream.py  preempted.py  reset_orphans.py  resize.py  runner.py  runner_types.py  shared.py  status.py  stream_logs.py
cli/sparklespray/worker/: .gitignore  Dockerfile  build.sh
cli/tests/: conftest.py
cli/tests/sparklespray/: batch_api_test.py  config_test.py  delete_test.py  factories.py  func_test.py  gcp_utils_test.py  integration_test.py  key_store_test.py  resize_cluster_test.py  spec_test.py  test_incremental_task_fetcher.py  test_list.py  test_resize.py  (+6 more)
(+445 files in other folders)
