[tool.poetry]
name = "sparklespray"
version = "5.6.0"
description = "CLI for submitting batch jobs to GCP for execution"
authors = ["Philip Montgomery <pmontgom@broadinstitute.org>"]
include = ["sparklespray/bin/sparklesworker"]

[tool.poetry.dependencies]
python = "^3.10"

termcolor = "^1.1.0"
google-cloud-datastore ="^2.8.1"
google-cloud-storage = "^2.5.0"
pydantic="^2.10.2"
google-api-python-client="^2.58.0"
pyOpenSSL="^22.0.0"
types-protobuf = "^4.21.0.2"
google-cloud-batch = "^0.17.31"
google-cloud-compute = "^1.30.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
grpcio-tools = "^1.51.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
mypy = "^0.991"
types-protobuf = "^4.21.0.2"
mypy-protobuf = "^3.4.0"
pylint = "^2.15.9"
pyright-ratchet = {git = "https://github.com/pgm/pyright-ratchet.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sparkles="sparklespray.main:main"
